# TermInA

./: .gitignore  BUILD_GUIDE.md  BUILD_SUCCESS.md  DEBUG_INSTRUCTIONS.md  DEBUG_PTY_ISSUE.md  DISTRIBUTION_READY.md  IMPLEMENTATION_CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_MIGRATION.md  PRIVILEGED_COMMANDS_FIX.md  PROJECT_STATUS.md  README.md  RUST_TERMINAL_GUIDE.md  RUST_TERMINAL_IMPLEMENTATION.md  SETTINGS_DEBUGGING_SUMMARY.md  SETTINGS_FIX_SUMMARY.md  Settings.webm  TAURI_MIGRATION.md  TERMINAL_IMPROVEMENTS.md  THEMES_CURSOR_SUMMARY.md  THEMES_CURSOR_TEST_GUIDE.md  THEME_DEBUG_INSTRUCTIONS.md  WEBSCRAPER_CHANGELOG.md  build-all.sh  comand.webm  main.js  package-lock.json  package.json  preload.js  setup-tauri.sh  simple-test.cjs  test-final-integration.cjs  test-interactive-terminal.cjs
.github/: copilot-instructions.md
docs/: AI_AGENT_GUIDE.md  API.md  API_KEYS_SETUP.md  LANGUAGE_DETECTION.md  LM_STUDIO_SETUP.md  MULTI_AI_SETUP.md  OLLAMA_COMPATIBILITY.md  OLLAMA_SETUP.md  SUDO_SUPPORT.md  TERMINAL_FEATURES.md  THEMES.md  TROUBLESHOOTING.md  WEBSCRAPER_INTEGRATION.md  WEB_LOADER_SYSTEM.md
examples/: multilingual-examples.md  web-integration-example.js  webscraper-config.json
renderer/: ai-status-manager.js  index.html  interactive-terminal.css  interactive-terminal.js  main.js  pty-terminal.js  rust-terminal.js  settings-simple.js  settings-style.css  settings.html  settings.js  simple-terminal.css  simple-terminal.js  style.css  tauri-init.js
rust-terminal/: Cargo.toml  README.md  build.rs
rust-terminal/src/: cmd_exec.rs  ffi.rs  lib.rs  main.rs  pty_manager.rs  real_pty.rs  session.rs  sudo_handler.rs
scripts/: sync-renderer.mjs
src/: ai-agent.js  ai-context-manager.js  ai-manager.js  command-history.js  config.js  language-detector.js  path-alias.js  pty-manager.js  rust-pty-communicator.js  rust-terminal-wrapper.js  system-info.js  web-ai-integration.js  webscraper-enhanced.js  webscraper-playwright.js  webscraper.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_manager.rs  command_history.rs  config.rs  config_manager.rs  lib.rs  main.rs  pty_manager.rs  rust_terminal.rs  system_info.rs  webscraper.rs
src-tauri/src/pty/: mod.rs  pty_manager.rs  session.rs  sudo_handler.rs
