[package]
name = "termina"
version = "2.0.0"
description = "Modern terminal emulator with AI integration - Warp-like design for macOS and Linux"
authors = ["Termina Team"]
license = "MIT"
repository = "https://github.com/termina/termina"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = ["config-toml"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["config-toml", "unstable"] }
tauri-plugin-log = "2.0"
tauri-plugin-fs = "2.3.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
portable-pty = { version = "0.9.0", features = ["serde"] }
rpassword = "7.3"
hostname = "0.3"
os_info = "3.8"
